# aileen

./: .env.example  .gitignore  README.md  pyproject.toml
aileen/: __init__.py  __main__.py  app.py  config.py  conversation.py  factory.py  gui.py  prompts.py  speech.py  timing.py
aileen/audio/: __init__.py  files.py  player.py  recorder.py
aileen/knowledge/: __init__.py  base.py  static.py
aileen/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
aileen/voice/: __init__.py
aileen/voice/stt/: __init__.py  base.py  openai_stt.py
aileen/voice/tts/: __init__.py  base.py  elevenlabs_tts.py  openai_tts.py
data/knowledge/: faq.md
tests/: test_smoke.py
