[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aileen"
version = "0.1.0"
description = "Aileen — a customer-service voice bot (speech in, LLM reasoning, ElevenLabs voice out)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "anthropic>=0.39",
    "elevenlabs>=1.5",
    "python-dotenv>=1.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aileen = "aileen.app:main"

[tool.setuptools.packages.find]
include = ["aileen*"]
